SERVER-47167 Make hedged read tests more robust

(cherry picked from commit ffff3f7fce95d45192c8b6cb65845907d6128922)